--- a/not_hesaplama.html
+++ b/not_hesaplama.html
@@ -102,6 +102,14 @@ Sözlü 2:<input type="text" name="sözlü2" class="hesap_kutusu" maxlength="3" 
  							if (ortalama<50) {
  								durum = "Dersten kaldı";
  							}
+	 
+	 						else if (ortalama==31) {
+							durum = "SAŞLKDJSAŞLKJDSAIJDOISAJDLKJSALKDA";								
+							}
+	 
+	 						else if (ortalama==62) {
+							durum = "SAŞLKDJSAŞLKJDSAIJDOISAJDLKJSALKDA";								
+							}
 
  							else {
  								durum = "Dersten geçti";
